image is everything apparently

--- a/TODO
+++ b/TODO
@@ -1,9 +1,13 @@
 Keyboard types correct
 hook up database
 run query on calculate button
+display rates screen
 hook up email functionality
 hook up pdf generation
+modal premium pay simplified issue reminder popup
 
+
+BUGS:
 fix lgsp from fi calc code path
+May 30 13:38:58 MBP.local InsuranceApp[30517] <Error>: CGContextConcatCTM: invalid context 0x0
 
-ship
